frame/support/test/tests/derive_no_bound_ui/partial_ord.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/partial_ord.rs:6:8
  |
6 | struct Foo<T: Config> {
  |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> == Foo<T>`
  |
  = help: the trait `PartialEq` is not implemented for `Foo<T>`
note: required by a bound in `PartialOrd`
 --> $RUST/core/src/cmp.rs
  |
  | pub trait PartialOrd<Rhs: ?Sized = Self>: PartialEq<Rhs> {
  |                                           ^^^^^^^^^^^^^^ required by this bound in `PartialOrd`
